# backend/src/CodigoActivo.Infrastructure/Database/Configurations/EventConfiguration.cs
@@ -26,6 +26,12 @@ public class EventConfiguration : IEntityTypeConfiguration<Event>
             .OnDelete(DeleteBehavior.Restrict);
 
         builder
+            .HasOne(e => e.TermsDocument)
+            .WithMany()
+            .HasForeignKey(e => e.TermsDocumentId)
+            .OnDelete(DeleteBehavior.Restrict);
+
+        builder
             .HasOne<User>()
             .WithMany()
             .HasForeignKey(e => e.CreatedBy)
